1.5.16.dev0
 * Better error messages! Switch the library used for validating configuration files (from pykwalify
   to jsonschema).
 * Link borgmatic Ansible role from installation documentation:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#other-ways-to-install

1.5.15
 * #419: Document use case of running backups conditionally based on laptop power level:
   https://torsion.org/borgmatic/docs/how-to/backup-to-a-removable-drive-or-an-intermittent-server/
 * #425: Run arbitrary Borg commands with new "borgmatic borg" action. See the documentation for
   more information: https://torsion.org/borgmatic/docs/how-to/run-arbitrary-borg-commands/

1.5.14
 * #390: Add link to Hetzner storage offering from the documentation.
 * #398: Clarify canonical home of borgmatic in documentation.
 * #406: Clarify that spaces in path names should not be backslashed in path names.
 * #423: Fix error handling to error loudly when Borg gets killed due to running out of memory!
 * Fix build so as not to attempt to build and push documentation for a non-master branch.
 * "Fix" build failure with Alpine Edge by switching from Edge to Alpine 3.13.
 * Move #borgmatic IRC channel from Freenode to Libera Chat due to Freenode takeover drama.
   IRC connection info: https://torsion.org/borgmatic/#issues

1.5.13
 * #373: Document that passphrase is used for Borg keyfile encryption, not just repokey encryption.
 * #404: Add support for ruamel.yaml 0.17.x YAML parsing library.
 * Update systemd service example to return a permission error when a system call isn't permitted
   (instead of terminating borgmatic outright).
 * Drop support for Python 3.5, which has been end-of-lifed.
 * Add support for Python 3.9.
 * Update versions of test dependencies (test_requirements.txt and test containers).
 * Only support black code formatter on Python 3.8+. New black dependencies make installation
   difficult on older versions of Python.